[project]
name = "iteboshi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["transformers", "datasets", "huggingface_hub[hf_xet]", "torch", "torchaudio", "librosa", "soundfile", "evaluate", "jiwer", "accelerate", "deepspeed", "wandb"]
