[project]
name = "iteboshi"
version = "0.2.0"
description = "A library for training and evaluating speech recognition models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.6.0",
    "datasets[audio]>=3.5.1",
    "deepspeed>=0.16.7",
    "evaluate>=0.4.3",
    "huggingface-hub[hf-xet]>=0.30.2",
    "jiwer>=3.1.0",
    "librosa>=0.11.0",
    "polars>=1.29.0",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "transformers[tokenizers]==4.48.3",
    "wandb>=0.19.10",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda" },
]
torchaudio = [
    { index = "pytorch-cuda" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
